--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
 .pagination {
   float: right;
 }
+.ReactModal__Overlay.ReactModal__Overlay--after-open {
+  background-color: #0000008a !important;
+}
